sumo/tests/traci/ChangeTarget/InvalidNodeId/testclient_out.traci
TraCITestClient output file. Date: Tue May 13 20:18:35 2008


-> Command sent: <SimulationStep>:
  TargetTime=1 PosFormat=1
.. Command acknowledged (1), [description: ]
.. Received Response <MoveNode>:
  nodeId=0 targetTime=1 2D-Position: x=2508.15 y=491.85

-> Command sent: <ChangeTarget>:
  NodeId=1 RoadId=e_m6
.. Answered with error to command (49), [description: Can not retrieve node with given ID]

-> Command sent: <SimulationStep>:
  TargetTime=150 PosFormat=1
----
Error while receiving command: tcpip::Socket::receive() @ recv: Socket reset by peer
----
Error while sending command: send failed: Socket reset by peer
